# crewboard-ergi-isaraj

./: .gitignore  README.md  docker-compose.yaml
backend/: BACKEND.md  Dockerfile  pyproject.toml  seed.py
backend/app/: main.py
backend/app/database/: engine.py
backend/app/domains/: models.py
backend/app/domains/crew_assignment/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/crew_management/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/flights/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/model/: tables.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_constraints.py
db/: DB.md
